--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -3,7 +3,7 @@
         <h1><span class="fa fa-lock"></span> {{message}}</h1>
         <a href="/logout">Logout</a>
         <p>Howdy, {{user.email}}!</p>
-        <a href="/lists">Your Lists</a>
+        <a href="/todos">Your Todos</a>
     </div>
 </div>
 <div class="container">
