--- a/public/templates/partials/error.html
+++ b/public/templates/partials/error.html
@@ -1,3 +1,3 @@
-<div class="flash">
+<div class="alert alert-danger" role="alert" ng-if="errors">
 	<p ng-repeat="error in errors">{{error}}</p>
 </div>
