--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -21,6 +21,19 @@
     </form>
 	<h2>All Todos</h2>
 	<ol class="list-group">
-		<li class="list-group-item" ng-repeat="todo in todos">{{todo.text}} <a href="#" ng-click="delete(todo); $event.preventDefault();"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></li>
+		<li class="list-group-item" ng-repeat="todo in todos">
+            <span ng-hide="editing" ng-click="editing = true">{{todo.text}}</span>
+            <form ng-show="editing" ng-submit="update(todo); editing = false">
+                <div class="form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" name="todo" ng-model="todo.text">
+                        <span class="input-group-btn">
+                            <button type="submit" class="btn btn-success">Save</button>
+                        </span>
+                    </div>
+                </div>
+            </form>
+            <a href="#" ng-click="delete(todo); $event.preventDefault();"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+        </li>
 	</ol>
 </div>
