Add first and last name to User model - Refactor user module to return a User object with references to the schema and model - Add first and last name inputs to signup form - Update profile and todos templates to display first name welcome message instead of email - Update Passport config to handle user first and last name

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -2,7 +2,7 @@
     <div class="jumbotron text-center">
         <h1><span class="fa fa-lock"></span> {{message}}</h1>
         <a href="/logout">Logout</a>
-        <p>Howdy, {{user.email}}!</p>
+        <p>Howdy, {{user.name.first}}!</p>
         <a href="/todos">Your Todos</a>
     </div>
 </div>
