--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="jumbotron text-center">
         <h1><span class="fa fa-lock"></span> {{message}}</h1>
-        <p>Howdy, {{user.email}}!</p>
+        <p>Howdy, {{user.name.first}}!</p>
         <a href="/profile">Your Profile</a>
     </div>
 </div>
