--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -3,6 +3,12 @@
     <!-- LOGIN FORM -->
     <form ng-submit="submit()">
         <div class="form-group">
+            <label>First name</label>
+            <input type="text" class="form-control" name="firstName" ng-model="firstName">
+            <label>Last name</label>
+            <input type="text" class="form-control" name="lastName" ng-model="lastName">
+        </div>
+        <div class="form-group">
             <label>Email</label>
             <input type="text" class="form-control" name="email" ng-model="email">
         </div>
