--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,3 +1,4 @@
+<div ng-include="'templates/partials/header.html'"></div>
 <div class="container">
     <div class="jumbotron text-center">
         <h1><span class="fa fa-lock"></span> {{message}}</h1>
