--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,3 +1,4 @@
+<div ng-include="'templates/partials/header.html'"></div>
 <div class="col-sm-6 col-sm-offset-3">
     <h1><span class="fa fa-sign-in"></span> {{message}}</h1>
     <!-- LOGIN FORM -->
