--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -1,10 +1,4 @@
-<div class="container">
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> {{message}}</h1>
-        <p>Howdy, {{user.name.first}}!</p>
-        <a href="/profile">Your Profile</a>
-    </div>
-</div>
+<div ng-include="'templates/partials/header.html'"></div>
 <div class="container">
 	<h3>Add Todo</h3>
 	<form ng-submit="submit()">
