--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,9 +1,8 @@
 <div ng-include="'templates/partials/header.html'"></div>
 <div class="container">
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> {{message}}</h1>
-        <p>Login or Register with:</p>
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+    <div class="greeting">
+        <h1>Hello.</h1>
+        <p>todo'r is a simple todo app. no bells or whistles, just lists and things that need a doin'.</p>
+        <a href="/login" class="button">Login</a> or <a href="/signup" class="button">Signup</a>
     </div>
 </div>
