--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,20 +1,23 @@
 <div ng-include="'templates/partials/header.html'"></div>
-<div class="col-sm-6 col-sm-offset-3">
-    <h1><span class="fa fa-sign-in"></span> {{message}}</h1>
-    <!-- LOGIN FORM -->
+<div class="container">
+    <div class="greeting">
+        <h1>Login.</h1>
+        <p>Already have an account? Great! Log in below.</p>
+    </div>
+</div>
+<div class="container">
     <form ng-submit="submit()">
         <div class="form-group">
             <label>Email</label>
-            <input type="text" class="form-control" name="email" ng-model="email">
+            <input type="text" name="email" ng-model="email">
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" name="password" ng-model="password">
+            <input type="password" name="password" ng-model="password">
         </div>
-        <button type="submit" class="btn btn-warning btn-lg">Login</button>
+        <button type="submit" class="button">Login</button>
         <div ng-include="'templates/partials/error.html'"></div>
+        <p>Need an account? <a href="/signup">Signup</a></p>
     </form>
     <hr>
-    <p>Need an account? <a href="/signup">Signup</a></p>
-    <p>Or go <a href="/">home</a>.</p>
 </div>
