--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -3,6 +3,7 @@
     <div class="greeting">
         <h1>Hello.</h1>
         <p>todo'r is a simple todo app. no bells or whistles, just lists and things that need a doin'.</p>
-        <a href="/login" class="button">Login</a> or <a href="/signup" class="button">Signup</a>
+        <br>
+        <p><a href="/login" class="button">Login</a> or <a href="/signup" class="button">Signup</a></p>
     </div>
 </div>
