--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -25,6 +25,16 @@ h1, p {
 p {
     font-size: 16px;
     line-height: 1.4;
+
+    a {
+        color: $primary;
+        text-decoration: none;
+        transition: color .1s;
+
+        &:hover {
+            color: $sky;
+        }
+    }
 }
 
 .container {
@@ -55,14 +65,16 @@ p {
 
     &:hover {
         background-color: $bubblegum;
+        cursor: pointer;
+        color: #fff;
     }
 }
 
 .header {
-    padding: 15px 0 30px 0;
+    border-bottom: 1px solid $hint;
+    padding: 15px 0;
 
     .container {
-        border-bottom: 1px solid $hint;
         justify-content: space-between;
     }
 
@@ -74,7 +86,7 @@ p {
         letter-spacing: -1.8px;
         text-decoration: none;
 
-        margin: 20px 0;
+        margin: 15px 0;
     }
 
     .nav {
@@ -98,6 +110,35 @@ p {
     }
 }
 
+.inner-wrap {
+    margin: 0 0 120px;
+    padding: 0 0 60px;
+}
+
+.section {
+
+    &.signup,
+    &.login {
+
+        form {
+            border: 1px solid $slate;
+            padding: 45px 45px 30px 45px;
+            margin: 0 auto;
+            max-width: 550px;
+        }
+    }
+}
+
+.user-header {
+    background-color: lighten($slate, 75%);
+    padding: 15px 0;
+    margin: 0 0 30px;
+
+    .container {
+        justify-content: space-between;
+    }
+}
+
 .greeting {
     display: block;
     padding: 45px 0;
@@ -114,25 +155,68 @@ p {
     p {
         font-size: 18px;
         line-height: 1.6;
-        margin: 0 0 5px;
-    }
-
-    p:last-child {
-        margin-bottom: 60px;
+        margin: 0 0 15px;
     }
 }
 
-.todo-list {
-    a {
-        text-decoration: none;
+// Todos page
+
+.todo-wrap {
+
+    h2 {
+        width: 100%;
     }
 
-    li {
-        padding: 15px;
+    .form-wrap {
+        width: 25%;
     }
 
-    li.completed span.text {
-        opacity: 0.5;
-        text-decoration: line-through;
+    .todo-list {
+        list-style: none;
+        width: 75%;
+
+        a {
+            text-decoration: none;
+        }
+
+        li {
+            padding: 15px;
+        }
+
+        li.completed span.text {
+            opacity: 0.5;
+            text-decoration: line-through;
+        }
+    }
+}
+
+// Forms
+
+.form-wrap {
+    text-align: center;
+    width: 100%;
+
+    .form-group {
+        position: relative;
+
+        label {
+            font-size: 14px;
+            font-weight: 700;
+            color: lighten($slate, 50%);
+            position: absolute;
+            margin: 10px 15px;
+        }
+
+        input {
+            border: 1px solid $hint;
+            border-radius: 2px;
+            margin: 0 0 15px;
+            padding: 40px 15px 15px;
+            width: 100%;
+        }
+
+        button {
+            cursor: pointer;
+        }
     }
 }
