--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -1,6 +1,12 @@
 <div ng-include="'templates/partials/header.html'"></div>
-<div class="container">
-	<p>Name: </p>
-	<p>Gender: </p>
-	<p>Hobbies: </p>
+<div class="inner-wrap section profile">
+	<div class="user-header">
+        <div class="container">
+            <p ng-if="user">Howdy, {{user.name.first}}!</p>
+            <a href="#" class="button">Edit profile</a>
+        </div>
+    </div>
+	<div class="container">
+		<p>Name: {{user.name.first}} {{user.name.last}}</p>
+	</div>
 </div>
