--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -1,26 +1,32 @@
 <div ng-include="'templates/partials/header.html'"></div>
-<div class="col-sm-6 col-sm-offset-3">
-    <h1><span class="fa fa-sign-in"></span> {{message}}</h1>
-    <!-- LOGIN FORM -->
-    <form ng-submit="submit()">
-        <div class="form-group">
-            <label>First name</label>
-            <input type="text" class="form-control" name="firstName" ng-model="firstName">
-            <label>Last name</label>
-            <input type="text" class="form-control" name="lastName" ng-model="lastName">
+<div class="inner-wrap section signup">
+    <div class="container">
+        <div class="greeting">
+            <h1>Sign up.</h1>
+            <p>Hey, you got things you need to do? Excellent. <br>todo'r can help.</p>
         </div>
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" name="email" ng-model="email">
+    </div>
+    <div class="container">
+        <div class="form-wrap">
+            <form ng-submit="submit()">
+                <div class="form-group">
+                    <label>First name</label>
+                    <input type="text" name="firstName" ng-model="firstName">
+                    <label>Last name</label>
+                    <input type="text" name="lastName" ng-model="lastName">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" name="email" ng-model="email">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" name="password" ng-model="password">
+                </div>
+                <button type="submit" class="button">Signup</button>
+                <div ng-include="'templates/partials/error.html'"></div>
+                <p>Already have an account? <a href="/login">Login</a></p>
+            </form>
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password" ng-model="password">
-        </div>
-        <button type="submit" class="btn btn-warning btn-lg">Signup</button>
-        <div ng-include="'templates/partials/error.html'"></div>
-    </form>
-    <hr>
-    <p>Already have an account? <a href="/login">Login</a></p>
-    <p>Or go <a href="/">home</a>.</p>
+    </div>
 </div>
