Refactoring scss into partials

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,222 +1,14 @@
+@import 'utility/variables';
 @import 'base/normalize';
-
-$primary:   #466A80;
-$hint:      #e4e7e8;
-$slate:     #343738;
-$bubblegum: #FF6B7E;
-$sky:       #5BBAE3;
-
-html {
-    box-sizing: border-box;
-}
-
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-}
-
-h1, p {
-    color: $slate;
-}
-
-p {
-    font-size: 16px;
-    line-height: 1.4;
-
-    a {
-        color: $primary;
-        text-decoration: none;
-        transition: color .1s;
-
-        &:hover {
-            color: $sky;
-        }
-    }
-}
-
-.container {
-    align-items: center;
-    display: flex;
-
-    padding: 0 30px;
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 100%;
-}
-
-.button {
-    display: inline-block;
-    background-color: $primary;
-    border-radius: 2px;
-    color: #fff;
-    border: 0;
-    padding: 10px 20px;
-    margin: 0 10px;
-    font-size: 18px;
-    font-weight: 400;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color .1s;
-    width: auto;
-
-    &:hover {
-        background-color: $bubblegum;
-        cursor: pointer;
-        color: #fff;
-    }
-}
-
-.header {
-    border-bottom: 1px solid $hint;
-    padding: 15px 0;
-
-    .container {
-        justify-content: space-between;
-    }
-
-    .app-name {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 400;
-        font-size: 36px;
-        color: $sky;
-        letter-spacing: -1.8px;
-        text-decoration: none;
-
-        margin: 15px 0;
-    }
-
-    .nav {
-        list-style: none;
-
-        li {
-            display: inline-block;
-            margin: 0 15px;
-        }
-
-        a {
-            color: $slate;
-            font-weight: 700;
-            text-decoration: none;
-            transition: color 0.1s;
-
-            &:hover {
-                color: $bubblegum;
-            }
-        }
-    }
-}
-
-.inner-wrap {
-    margin: 0 0 120px;
-    padding: 0 0 60px;
-}
-
-.section {
-
-    &.signup,
-    &.login {
-
-        form {
-            border: 1px solid $slate;
-            padding: 45px 45px 30px 45px;
-            margin: 0 auto;
-            max-width: 550px;
-        }
-    }
-}
-
-.user-header {
-    background-color: lighten($slate, 75%);
-    padding: 15px 0;
-    margin: 0 0 30px;
-
-    .container {
-        justify-content: space-between;
-    }
-}
-
-.greeting {
-    display: block;
-    padding: 45px 0;
-    margin: 0 auto;
-    max-width: 550px;
-    text-align: center;
-
-    h1 {
-        font-size: 56px;
-        line-height: 1;
-        margin: 15px 0;
-    }
-
-    p {
-        font-size: 18px;
-        line-height: 1.6;
-        margin: 0 0 15px;
-    }
-}
-
-// Todos page
-
-.todo-wrap {
-
-    h2 {
-        width: 100%;
-    }
-
-    .form-wrap {
-        width: 25%;
-    }
-
-    .todo-list {
-        list-style: none;
-        width: 75%;
-
-        a {
-            text-decoration: none;
-        }
-
-        li {
-            padding: 15px;
-        }
-
-        li.completed span.text {
-            opacity: 0.5;
-            text-decoration: line-through;
-        }
-    }
-}
-
-// Forms
-
-.form-wrap {
-    text-align: center;
-    width: 100%;
-
-    .form-group {
-        position: relative;
-
-        label {
-            font-size: 14px;
-            font-weight: 700;
-            color: lighten($slate, 50%);
-            position: absolute;
-            margin: 10px 15px;
-        }
-
-        input {
-            border: 1px solid $hint;
-            border-radius: 2px;
-            margin: 0 0 15px;
-            padding: 40px 15px 15px;
-            width: 100%;
-        }
-
-        button {
-            cursor: pointer;
-        }
-    }
-}
+@import 'base/globals';
+@import 'base/type';
+@import 'layout/animate';
+@import 'layout/grid';
+@import 'layout/header';
+@import 'layout/forms';
+@import 'templates/login-logout';
+@import 'templates/todos';
+@import 'templates/profile';
+@import 'components/buttons';
+@import 'components/greeting';
+@import 'components/user-header';
