--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,9 +1,12 @@
-<div ng-include="'templates/partials/header.html'"></div>
-<div class="container">
-    <div class="greeting">
-        <h1>Hello.</h1>
-        <p>todo'r is a simple todo app. no bells or whistles, just lists and things that need a doin'.</p>
-        <br>
-        <p><a href="/login" class="button">Login</a> or <a href="/signup" class="button">Signup</a></p>
+<div class="inner-wrap">
+    <div class="inner-body">
+        <div class="container">
+            <div class="greeting">
+                <h1>Hello.</h1>
+                <p>todo'r is a simple todo app. no bells or whistles, just lists and things that need a doin'.</p>
+                <br>
+                <p><a href="/login" class="button">Login</a> or <a href="/signup" class="button">Signup</a></p>
+            </div>
+        </div>
     </div>
 </div>
