--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,26 +1,27 @@
-<div ng-include="'templates/partials/header.html'"></div>
-<div class="inner-wrap section login">
-    <div class="container">
-        <div class="greeting">
-            <h1>Login.</h1>
-            <p>Already have an account? Great! Log in below.</p>
+<div class="inner-wrap">
+    <div class="inner-body">
+        <div class="container">
+            <div class="greeting">
+                <h1>Login.</h1>
+                <p>Already have an account? Great! Log in below.</p>
+            </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="form-wrap">
-            <form ng-submit="submit()">
-                <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" name="email" ng-model="email">
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" name="password" ng-model="password">
-                </div>
-                <button type="submit" class="button">Login</button>
-                <div ng-include="'templates/partials/error.html'"></div>
-                <p>Need an account? <a href="/signup">Signup</a></p>
-            </form>
+        <div class="container">
+            <div class="form-wrap">
+                <form ng-submit="submit()">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" name="email" ng-model="email">
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" name="password" ng-model="password">
+                    </div>
+                    <button type="submit" class="button">Login</button>
+                    <div ng-include="'templates/partials/error.html'"></div>
+                    <p>Need an account? <a href="/signup">Signup</a></p>
+                </form>
+            </div>
         </div>
     </div>
 </div>
