--- a/public/templates/logout.html
+++ b/public/templates/logout.html
@@ -1,3 +1,7 @@
-<div class="col-sm-6 col-sm-offset-3">
-    <p>You've been logged out.</p>
+<div class="inner-wrap">
+    <div class="inner-body">
+        <div class="container">
+            <h2>You've been logged out.</h2>
+        </div>
+    </div>
 </div>
