--- a/public/templates/partials/todo.html
+++ b/public/templates/partials/todo.html
@@ -1,4 +1,4 @@
-<li class="list-group-item" ng-repeat="todo in todos" ng-class="!todo.completed || 'completed'">
+<li class="list-group-item" ng-repeat="todo in todos | orderBy:'-createdAt'" ng-class="!todo.completed || 'completed'">
     <a href="#" toggle-complete>Done</a>
     <span class="text" ng-hide="editing" ng-click="editing = true">{{todo.text}}</span>
     <form ng-show="editing" ng-submit="update(todo); editing = false">
@@ -11,5 +11,5 @@
             </div>
         </div>
     </form>
-    <a href="#" ng-click="delete(todo); $event.preventDefault();"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+    <a href="#" ng-click="delete(todo); $event.preventDefault();">Delete</a>
 </li>
