Refactoring todo done input to a checkbox instead of anchor

--- a/public/templates/partials/todo.html
+++ b/public/templates/partials/todo.html
@@ -1,6 +1,5 @@
 <li class="list-group-item" ng-repeat="todo in todos | orderBy:'-createdAt'" ng-class="!todo.completed || 'completed'">
-    <a href="#" toggle-complete>Done</a>
-    <span class="text" ng-hide="editing" ng-click="editing = true">{{todo.text}}</span>
+    <input toggle-complete type="checkbox" class="todo-complete" ng-model="todo.completed" ng-change="toggleComplete(todo)">
     <form ng-show="editing" ng-submit="update(todo); editing = false">
         <div class="form-group">
             <div class="input-group">
@@ -11,5 +10,6 @@
             </div>
         </div>
     </form>
+    <span class="text" ng-hide="editing" ng-click="editing = true">{{todo.text}}</span>
     <a href="#" ng-click="delete(todo); $event.preventDefault();">Delete</a>
 </li>
