--- a/public/templates/partials/user-header.html
+++ b/public/templates/partials/user-header.html
@@ -1,4 +1,4 @@
 <div class="container">
     <p ng-if="user">Howdy, {{user.name.first}}!</p>
-	<p><strong>6</strong> lists</p>
+	<p> Search <strong>6</strong> lists for <input type="text" class="list-search"></p>
 </div>
