--- a/public/templates/partials/todo.html
+++ b/public/templates/partials/todo.html
@@ -1,5 +1,6 @@
 <li class="list-group-item" ng-repeat="todo in todos | orderBy:'-createdAt'" ng-class="!todo.completed || 'completed'">
     <input toggle-complete type="checkbox" class="todo-complete" ng-model="todo.completed" ng-change="toggleComplete(todo)">
+    <a href="#" class="todo-edit"><img src="icons/edit-pencil.svg" alt=" "></a>
     <form ng-show="editing" ng-submit="update(todo); editing = false">
         <div class="form-group">
             <div class="input-group">
@@ -11,5 +12,5 @@
         </div>
     </form>
     <span class="text" ng-hide="editing" ng-click="editing = true">{{todo.text}}</span>
-    <a href="#" ng-click="delete(todo); $event.preventDefault();">Delete</a>
+    <span class="delete"><a href="#" ng-click="delete(todo); $event.preventDefault();">Delete</a></span>
 </li>
