--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -26,6 +26,7 @@
                         </form>
                     </div>
                     <ol class="todo-list" ng-include="'templates/partials/todo.html'"></ol>
+                    <h4>Completed</h4>
                 </div>
             </div>
         </div>
