--- a/public/scss/templates/_todos.scss
+++ b/public/scss/templates/_todos.scss
@@ -99,12 +99,25 @@
         }
 
         li {
-            padding: 15px;
+            position: relative;
+            padding: 15px 0;
         }
 
         li.completed span.text {
             opacity: 0.5;
             text-decoration: line-through;
+        }
+
+        .todo-edit {
+            img {
+                height: 12px;
+                width: 12px;
+            }
+        }
+
+        .delete {
+            position: absolute;
+            right: 0;
         }
     }
 }
